Update x-pack/plugin/shutdown/src/main/java/org/elasticsearch/xpack/shutdown/TransportGetShutdownStatusAction.java
Use Object.equals to simplify comparison.

Co-authored-by: Ievgen Degtiarenko <ievgen.degtiarenko@gmail.com>